# arena-agent

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CHANGELOG.ru.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.ru.md  README_UNIVERSAL_RU.md  RECOVERY_PROMPT_UNIVERSAL_RU.md  RELEASE.md  ROADMAP.md  SECURITY.md  _arena_helper.py  bump_v323.py  install.bat  install.sh  install_linux.sh  install_v150.ps1  pyproject.toml  regenerate_token.bat  regenerate_token.sh  release_v3210.md  release_v3211.md  release_v3212.md  release_v3213.md  release_v323.md  release_v326.md  release_v327.md  release_v328.md  release_v329.md  requests.jsonl  requirements.txt  start.bat  start.sh  start_ArenaUnifiedBridge.ps1  status.bat  status.sh  (+10 more)
.github/: dependabot.yml
.github/workflows/: ci.yml  security-scan.yml  stale.yml  version-badge.yml
arena/: __init__.py  agent_session.py  app.py  app_keys.py  bind_detect.py  bootstrap.py  bootstrap_config.py  bootstrap_daemon.py  bootstrap_env.py  bootstrap_logging.py  bootstrap_token.py  capabilities.py  cli.py  constants.py  container.py  control.py  control_handlers.py  errors.py  handler_context.py  handler_helpers.py  hardware.py  http.py  inventory_runner.py  lifecycle.py  paths.py  rate_limit.py  routes.py  security.py  security_commands.py  security_input.py  security_ssrf.py  service_runtime.py  util.py  web_utils.py
arena/admin/: __init__.py  auto_update.py  auto_update_windows.py  autostart.py  binaries.py  bore.py  browseract.py  cloudflared.py  cloudflared_autostart.py  compat.py  handlers.py  handlers_autostart.py  handlers_proposal.py  handlers_update.py  ngrok.py  proposal.py  runtime.py  sync_factories.py  tailscale.py  token.py  tunnels.py  tunnels_breaker.py  update_github.py  zerotier.py  zerotier_central.py  zerotier_central_handlers.py  zerotier_peers.py
arena/agent_helpers/: cli.py  files.py  runtime.py
arena/agentctl_cli/: __init__.py  agentctl_breaker.py  agentctl_bridge.py  agentctl_browser.py  agentctl_browseract.py  agentctl_common.py  agentctl_main.py  agentctl_memory.py  agentctl_misc.py  agentctl_skills.py  agentctl_system.py  agentctl_tasks.py  pinning.py  tls.py  url_cache.py
arena/agentctl_extras/: actions.py  cli.py  common.py  integrations.py  maintenance.py  status.py
arena/agentic/: __init__.py  handlers.py  runtime.py
arena/api_v2/: __init__.py  common.py  constants.py  exec_handler.py  handlers.py  info_handlers.py
arena/auth/: __init__.py  handlers.py  runtime.py  users.py
arena/batch/: __init__.py  handlers.py
arena/browser/: __init__.py  browse_browseract.py  browse_cdp.py  browse_handlers.py  diagnose_elevation.py  fetch.py  fetch_handlers.py  handlers.py  runtime.py
arena/chat_cli/: cli.py  commands.py  common.py  repl.py
arena/cluster/: __init__.py  handlers.py  (+1 more)
backups/: arena-agent-backup-20260524T232922Z.tgz  arena-agent-backup-20260525T134137Z.tgz  arena-agent-backup-20260525T144819Z.tgz  arena-agent-backup-20260525T145542Z.tgz  pre-stress-test-backup-1779664234.tgz
chat_extension/: README.md  adapter_sites.js  adapters.js  background.js  content.js  diag.js  insert_history.js  insert_strategies.js  manifest.json  parser.js  popup.css  popup.html  popup.js  settings.js  shadow_toolbar.css  shadow_toolbar.js  sidepanel.html  sidepanel.js
dashboard/: index.html
dev/: bump_version.py  smoke.sh  stress-test-v4.py
docs/: AGENTS.md.template  AGENT_PROTOCOL.md  AI_CODEBASE_NAVIGATION.md  AI_PROMPT_TEMPLATE.md  AI_SYSTEM_PROMPT.md  CHAT_BRIDGE_EXTENSION_PLAN.md  EXPERIMENTS.md  INTEGRATIONS.md  MOBILE.md  MOBILE_SUPPORT_ROADMAP.md  MODULE_MAP.md  MULTIAGENT.md  PRODUCT_DIRECTION.md  ROADMAP_CANONICAL.md  ROADMAP_IDEAS.md  ROADMAP_v2.md  SESSION_POSTMORTEM_v4.2_to_v4.20.md  STRATEGIC_POSITION_AND_CANONICAL_ROADMAP_2026-06-19.md  STRESS_TEST_V4.md  SUPERPOWERS.md  V3_MODULAR_ARCHITECTURE.md  V3_RELEASE_CHECKLIST.md  V3_STABILIZATION_AUDIT.md  WINGET_INSTALLATION.txt  browser-headless-on-windows.md  coverage-baseline.json  spec-kit-integration.md  v1_roadmap.md  version.json
js/: package-lock.json  package.json
mcp/: mcp.json  registry.json
memory/: RECOVERY_PROMPT_RU.md  facts.jsonl
queue/: tasks-archive-20260522T232235Z.tgz
reports/: arena_kwin_windows_j2f1i9tb.js
scripts/: agent_helpers.py  agentctl_extras.py  appcontainer_run.ps1  apply_catalogue_hardening.py  apply_patch.py  audit_tool.py  backup_tool.py  browser_lab.js  browser_report.js  browser_smoke.js  catalogue_harden.py  cdp_browser.py  changelog_freshness.py  chat.py  chat_append.py  check_latest_release.py  client_tools.py  command_registry.py  coverage_diff.py  cross_platform_check.py  desktop_manager.py  extract_runtime_reqs.py  file_agent_loop.py  fix_agentctl_extras.py  http_probe.py  hwinfo.py  hwinfo_lite.py  inspect_update_log.py  install_linux_service.sh  install_macos_service.sh  install_windows_service.ps1  inventory.py  inventory.sh  live_logs_manager.py  make_release_zip.py  mcp_manager.py  mcp_stream_server.py  mcp_ws_server.py  memory.py  mission_manager.py  (+30 more)
tests/: _mcp_contract_snapshot.json  _version_matrix.py  test_admin_handlers.py  test_admin_proposal_core.py  test_admin_proposal_wiring.py  test_agent_config.py  test_agent_config_breaker.py  test_agentctl_breaker.py  test_agentctl_bridge.py  test_agentctl_bridge_redaction.py  test_agentctl_memory.py  test_agentctl_misc.py  test_agentctl_pinning.py  test_agentctl_tls.py  test_agentctl_token_loader.py  test_agentic.py  test_api_v2_handlers.py  test_apk_staging_hardening.py  test_app_factory.py  test_architecture_boundaries.py  test_audit_live_tail.py  test_audit_ring_cap.py  test_audit_runtime.py  test_audit_stream.py  test_audit_tab_polish.py  test_audit_value_redaction.py  test_auth_handlers.py  test_auth_runtime.py  test_auth_users.py  test_auto_update.py  test_auto_update_diagnostics_v4_60_14.py  test_auto_update_token_ui.py  test_auto_update_v502.py  test_auto_update_windows_v4_60_11.py  test_autostart_handlers.py  test_autostart_unified.py  test_batch_handlers.py  test_bind_detect.py  test_bootstrap.py  test_bore.py  (+275 more)
(+661 files in other folders)
