[project]
name = "arena-unified-bridge"
version = "4.61.1"
description = "Cross-platform local automation bridge for AI agents — one process, one port, modular Python architecture."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "IvanSkainet" }]
keywords = ["ai", "agent", "automation", "mcp", "bridge", "cdp", "desktop-automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

# Core runtime dependency. Everything else is optional and degrades gracefully.
dependencies = [
    "aiohttp>=3.9",
]

[project.optional-dependencies]
# Recommended extras for full system inventory and websocket transport.
full = [
    "psutil>=5.9",
    "websockets>=12.0",
]
# Tooling for contributors. v4.61.0 adds:
#   * hypothesis>=6.0  -- property-based testing (skip if missing, tests self-skip)
#   * pytest-cov>=4.0  -- coverage gate; the dev install pulls it in for
#                        `make coverage` and CI.
#   * mypy>=1.10       -- type checking. The codebase is large; only a
#                        subset is type-checked strictly (see [tool.mypy]
#                        below). Extend module-by-module as it stabilises.
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/IvanSkainet/arena-agent"
Repository = "https://github.com/IvanSkainet/arena-agent"
Changelog = "https://github.com/IvanSkainet/arena-agent/blob/master/CHANGELOG.md"

# ---------------------------------------------------------------------------
# Tooling configuration (no build-system: this is a single-file app run
# directly via `python unified_bridge.py serve`, not a pip-installed package).
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py310"
line-length = 120
# The codebase is large and organically grown; start lint adoption gradually.
extend-exclude = ["cloudflared", "backups", "logs", "reports"]

[tool.ruff.lint]
# Conservative starter rule set — expand over time as the code is cleaned up.
select = ["E", "F", "W", "I"]
ignore = [
    "E501",  # line length handled by formatter, not enforced yet
    "E722",  # bare except — to be cleaned up incrementally
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
# v4.61.0: --cov with a coverage gate. The threshold is intentionally
# permissive (70%) so the new gate doesn't break the existing suite on
# day one. Tighten per-module as the suite grows. Coverage reports go
# to coverage.xml (for CI artefact upload) and to stdout (for human
# review). The `branch` flag catches the most common case of a missed
# branch on a function with a single early-return.
addopts = [
    "-q",
    "--strict-markers",
    "--cov=arena",
    "--cov-report=term-missing",
    "--cov-report=xml:coverage.xml",
    "--cov-branch",
    "--cov-fail-under=70",
]

# ---------------------------------------------------------------------------
# Coverage: which paths count, which are excluded. v4.61.0 starts with
# `arena/` only — dashboard / docs / scripts are excluded so the gate
# measures runtime code, not glue.
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["arena"]
branch = true
omit = [
    "arena/__main__.py",
    "arena/conftest.py",
    "arena/tests/*",
    "*/__pycache__/*",
    "*/.pytest_cache/*",
    "*/site-packages/*",
]

[tool.coverage.report]
# Per-module thresholds are aspirational; they trip on PRs that drop
# coverage on a critical path. The global 70% gate above is the
# day-one safety net.
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "\\.\\.\\.",
]
sort = "Cover"
skip_covered = false
show_missing = true

# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false
disallow_untyped_defs = false      # most of arena/ has no annotations
disallow_any_generics = false
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
# Auto-update and the restart helpers are the path we actively
# maintain and where regressions hurt the most. Type-check them
# strictly so a refactor that breaks the contract lands as a PR
# failure, not as a 3am "bridge is dead" page.
module = [
    "arena.service.restart",
]
strict = true
disallow_untyped_defs = true
disallow_any_generics = true
warn_unused_ignores = true
